,true, conditional redirect
updated the generator with ,true and conditional redirect page.

--- a/redirect-generator.html
+++ b/redirect-generator.html
@@ -25,6 +25,9 @@
 		<div id='cookiesDiv'><input type="checkbox" id="cookies" name="cookies">Cookies</div>
 		<div id='frameBreakDiv'><input type="checkbox" id="frameBreak" name="frameBreak">Frame Breaker</div>
 		<div id='httpsDiv'><input type="checkbox" id="https" name="https">HTTPS</div>
+		<div id='commaTrueDiv'><input type="checkbox" id="commaTrue" name="commaTrue">Comma True</div>
+	</section>
+	<section id="permalink">
 	</section>
 	<section id="script">
 	</section>
